--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.tang</groupId>
     <artifactId>tang-examples</artifactId>
-    <version>0.0.84-SNAPSHOT</version>
+    <version>0.0.85-SNAPSHOT</version>
     <name>tang-examples</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -15,12 +15,12 @@
         <dependency>
             <groupId>org.tang</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.84-SNAPSHOT</version>
+            <version>0.0.86-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.tang</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.84-SNAPSHOT</version>
+            <version>0.0.86-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -212,7 +212,7 @@
                                 </property>
                                 <property>
                                     <name>listener</name>
-                                    <value>reports.VemHtmlReporter</value>
+                                    <value>reports.TangHtmlReporter</value>
                                     <value>org.uncommons.reportng.HTMLReporter</value>
                                 </property>
                                 <property>
