requireVisibleXpath is returning webelement and will not run twice in clikc, type ... functions

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,11 +1,23 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
-log4j.rootCategory=DEBUG, CONSOLE
+log = ./log
+log4j.rootLogger = ALL, FILE,CONSOLE
+
 
 # Set the enterprise logger category to FATAL and its only appender to CONSOLE.
 #log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=DEBUG
+#log4j.appender.CONSOLE.Threshold=INFO
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} %-5p %c{1} :%L -- %m%n
+
+# Define the file appender
+log4j.appender.FILE=org.apache.log4j.FileAppender
+log4j.appender.FILE.File=${log}/log.out
+log4j.appender.FILE.Append=false
+#log4j.appender.FILE.Threshold=trace
+#log4j.appender.FILE.MaxFileSize=10MB
+#log4j.appender.FILE.MaxBackupIndex=10
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.conversionPattern=[%d] [%5p] (%F:%L) - %m%n
