--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 log = ./log
-log4j.rootLogger = ALL, FILE,CONSOLE
+log4j.rootLogger = DEBUG, FILE,CONSOLE
 
 
 # Set the enterprise logger category to FATAL and its only appender to CONSOLE.
