--- a/pom.xml
+++ b/pom.xml
@@ -5,22 +5,23 @@
 
     <groupId>org.tang</groupId>
     <artifactId>tang-examples</artifactId>
-    <version>0.0.86-SNAPSHOT</version>
+    <version>0.0.87-SNAPSHOT</version>
     <name>tang-examples</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <cucumber-java.version>1.1.3</cucumber-java.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.tang</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.86-SNAPSHOT</version>
+            <version>0.0.87-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.tang</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.86-SNAPSHOT</version>
+            <version>0.0.87-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -86,6 +87,23 @@
             <groupId>com.theoryinpractise</groupId>
             <artifactId>cucumber-testng-factory</artifactId>
             <version>1.0.1</version>
+        </dependency>
+	 <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <scope>provided</scope>
+            <version>${cucumber-java.version}</version>
+     </dependency>
+        <dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>1.1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.6.2</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
