--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.tang</groupId>
     <artifactId>tang-examples</artifactId>
-    <version>0.0.90-SNAPSHOT</version>
+    <version>0.0.91-SNAPSHOT</version>
     <name>tang-examples</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,12 +16,12 @@
         <dependency>
             <groupId>org.tang</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.90-SNAPSHOT</version>
+            <version>0.0.91-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.tang</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.90-SNAPSHOT</version>
+            <version>0.0.91-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -38,11 +38,6 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.8.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-            <version>1.6.2</version>
         </dependency>
 
         <dependency>
@@ -88,12 +83,12 @@
             <artifactId>cucumber-testng-factory</artifactId>
             <version>1.0.1</version>
         </dependency>
-	 <dependency>
+        <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
             <scope>provided</scope>
             <version>${cucumber-java.version}</version>
-     </dependency>
+        </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
@@ -114,6 +109,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
+        </dependency>
+        <dependency>
+            <groupId>jtds</groupId>
+            <artifactId>jtds</artifactId>
+            <version>1.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -140,11 +140,6 @@
             <groupId>org.graphwalker</groupId>
             <artifactId>graphwalker</artifactId>
             <version>2.6.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>sqljdbc4</artifactId>
-            <version>3.0</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy.modules</groupId>
@@ -269,6 +264,8 @@
                             <compilerId>groovy-eclipse-compiler</compilerId>
                             <!-- set verbose to be true if you want lots of uninteresting messages -->
                             <!-- <verbose>true</verbose> -->
+                            <source>1.6</source>
+                            <target>1.6</target>
                         </configuration>
                         <dependencies>
                             <dependency>
