--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <name>tang-examples</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cucumber-java.version>1.1.3</cucumber-java.version>
+        <cucumber-java.version>6.7.0</cucumber-java.version>
     </properties>
 
     <dependencies>
@@ -32,12 +32,12 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.3</version>
+            <version>2.4.12</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.8.5</version>
+            <version>6.14.3</version>
         </dependency>
 
         <dependency>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
-            <version>2.10.0</version>
+            <version>2.12.0</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy.modules.http-builder</groupId>
@@ -84,15 +84,14 @@
             <version>1.0.1</version>
         </dependency>
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <scope>provided</scope>
             <version>${cucumber-java.version}</version>
         </dependency>
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>1.1.3</version>
+            <version>${cucumber-java.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -103,7 +102,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>3.4.0</version>
+            <version>3.141.59</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
@@ -113,7 +112,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.6</version>
+            <version>8.0.16</version>
         </dependency>
         <dependency>
             <groupId>jtds</groupId>
@@ -264,19 +263,19 @@
 
                     <plugin>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.1</version>
+                        <version>3.8.1</version>
                         <configuration>
                             <compilerId>groovy-eclipse-compiler</compilerId>
                             <!-- set verbose to be true if you want lots of uninteresting messages -->
                             <!-- <verbose>true</verbose> -->
-                            <source>1.6</source>
-                            <target>1.6</target>
+<!--                            <source>1.6</source>-->
+<!--                            <target>1.6</target>-->
                         </configuration>
                         <dependencies>
                             <dependency>
                                 <groupId>org.codehaus.groovy</groupId>
                                 <artifactId>groovy-eclipse-compiler</artifactId>
-                                <version>2.8.0-01</version>
+                                <version>3.6.0-03</version>
                                 <exclusions>
                                     <exclusion>
                                         <groupId>org.codehaus.groovy</groupId>
@@ -287,12 +286,12 @@
                             <dependency>
                                 <groupId>org.codehaus.groovy</groupId>
                                 <artifactId>groovy-eclipse-batch</artifactId>
-                                <version>2.1.8-01</version>
+                                <version>2.5.6-02</version>
                             </dependency>
                             <dependency>
                                 <groupId>org.codehaus.groovy</groupId>
                                 <artifactId>groovy-all</artifactId>
-                                <version>2.3.2</version>
+                                <version>2.4.12</version>
                             </dependency>
                         </dependencies>
                     </plugin>
