--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.tang</groupId>
     <artifactId>tang-examples</artifactId>
-    <version>0.0.92-SNAPSHOT</version>
+    <version>0.1.01-SNAPSHOT</version>
     <name>tang-examples</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,12 +16,12 @@
         <dependency>
             <groupId>org.tang</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.991-SNAPSHOT</version>
+            <version>0.1.01-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.tang</groupId>
             <artifactId>common</artifactId>
-            <version>0.0.991-SNAPSHOT</version>
+            <version>0.1.01-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>20030203.000550</version>
+            <version>2.7</version>
         </dependency>
 
         <dependency>
@@ -107,7 +107,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.3.5</version>
+            <version>4.5.10</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.0</version>
+            <version>3.4</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject</groupId>
@@ -163,7 +163,13 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-batch</artifactId>
-            <version>2.1.8-01</version>
+            <version>2.5.6-02</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.25</version>
         </dependency>
     </dependencies>
 
@@ -268,8 +274,8 @@
                             <compilerId>groovy-eclipse-compiler</compilerId>
                             <!-- set verbose to be true if you want lots of uninteresting messages -->
                             <!-- <verbose>true</verbose> -->
-<!--                            <source>1.6</source>-->
-<!--                            <target>1.6</target>-->
+                            <!--                            <source>1.6</source>-->
+                            <!--                            <target>1.6</target>-->
                         </configuration>
                         <dependencies>
                             <dependency>
